[package]
name = "overkilladdons"
version = "0.1.0"
edition = "2021"

[dependencies]
brotli = "8.0.2"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["register-docs"] }
lazy_static = "1.4.0"
multiinput = "0.1.0"
postcard = { version = "1.1.3", features = ["use-std"] }
rayon = "1.11.0"
serde = { version = "1.0", features = [ "derive" ] }
wide = "1.1.1"
zstd = "0.13.3"
zenavif = "0.1"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
windows-sys = "0.61.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = 'abort'
